# app/Http/Controllers/Auth/RegisteredUserController.php
@@ -13,11 +13,40 @@ use Illuminate\Validation\Rules;
 class RegisteredUserController extends Controller
 {
     /**
-     * Handle an incoming registration request.
+     * @OA\Post(
+     *     path="/api/register",
+     *     tags={"Auth"},
+     *     summary="Register User",
+     *     description="Registrasi user baru dan dapatkan token",
      *
-     * @throws \Illuminate\Validation\ValidationException
+     *     @OA\RequestBody(
+     *         required=true,
+     *
+     *         @OA\JsonContent(
+     *             required={"name","email","password"},
+     *
+     *             @OA\Property(property="name", type="string", example="user 2"),
+     *             @OA\Property(property="email", type="string", format="email", example="user_2@example.com"),
+     *             @OA\Property(property="password", type="string", format="password", example="secret123"),
+     *             @OA\Property(property="password_confirmation", type="string", format="password", example="secret123"),
+     *
+     *         )
+     *     ),
+     *
+     *     @OA\Response(
+     *         response=201,
+     *         description="Registrasi berhasil",
+     *
+     *         @OA\JsonContent(
+     *
+     *             @OA\Property(property="token", type="string", example="1|abc.def.ghi")
+     *         )
+     *     ),
+     *
+     *     @OA\Response(response=422, description="Validation error")
+     * )
      */
-    public function store(Request $request): Response
+    public function store(Request $request)
     {
         $request->validate([
             'name' => ['required', 'string', 'max:255'],
